--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,21 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+*.o
+*.a
+*.so
+
+_obj
+_test
+
+*.[568vq]
+[568vq].out
+
+*.cgo1.go
+*.cgo2.c
+_cgo_defun.c
+_cgo_gotypes.go
+_cgo_export.*
+
+_testmain.go
+
+*.exe
+
+.idea/
